# Ingenieria-de-Software---Los-Piratas

./: .gitignore
.circleci/: config.yml
PacMan/: CMakeLists.txt  CMakePresets.json  License.txt  README.md
PacMan/SFML/: CMakeLists.txt  cmake_install.cmake
PacMan/SFML/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
PacMan/SFML/src/SFML/Audio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-audio.vcxproj  sfml-audio.vcxproj.filters
PacMan/SFML/src/SFML/Audio/sfml-audio.dir/Debug/: sfml-audio-d-2.dll.recipe  sfml-audio-d-2.ilk
PacMan/SFML/src/SFML/Audio/sfml-audio.dir/Debug/sfml-audio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-audio.lastbuildstate  sfml-audio.write.1u.tlog
PacMan/SFML/src/SFML/Graphics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-graphics.vcxproj  sfml-graphics.vcxproj.filters
PacMan/SFML/src/SFML/Graphics/sfml-graphics.dir/Debug/: sfml-graphics-d-2.dll.recipe
PacMan/SFML/src/SFML/Graphics/sfml-graphics.dir/Debug/sfml-graphics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-graphics.lastbuildstate  sfml-graphics.write.1u.tlog
PacMan/SFML/src/SFML/Main/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-main.vcxproj  sfml-main.vcxproj.filters
PacMan/SFML/src/SFML/Main/sfml-main.dir/Debug/: sfml-main-d.lib.recipe
PacMan/SFML/src/SFML/Main/sfml-main.dir/Debug/sfml-main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  sfml-main.lastbuildstate
PacMan/SFML/src/SFML/System/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-system.vcxproj  sfml-system.vcxproj.filters
PacMan/SFML/src/SFML/System/sfml-system.dir/Debug/: sfml-system-d-2.dll.recipe  sfml-system-d-2.ilk
PacMan/SFML/src/SFML/System/sfml-system.dir/Debug/sfml-system.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-system.lastbuildstate  sfml-system.write.1u.tlog
PacMan/SFML/src/SFML/Window/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-window.vcxproj  sfml-window.vcxproj.filters
PacMan/SFML/src/SFML/Window/sfml-window.dir/Debug/: sfml-window-d-2.dll.recipe  sfml-window-d-2.ilk
PacMan/SFML/src/SFML/Window/sfml-window.dir/Debug/sfml-window.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-window.lastbuildstate  sfml-window.write.1u.tlog
PacMan/doc/: DiagramaDeClases.mdj
PacMan/include/: Chase.hpp  Dots.hpp  Entity.hpp  Frightened.hpp  Game.hpp  GameController.hpp  Ghost.hpp  Map.hpp  Menu.hpp  PacMan.hpp  Publisher.hpp  Scatter.hpp  State.hpp  Strategy.hpp
PacMan/media/images/: Ghost16.xcf  Map16.xcf
PacMan/src/: Chase.cpp  Dots.cpp  Entity.cpp  Frightened.cpp  Game.cpp  GameController.cpp  Ghost.cpp  Map.cpp  Menu.cpp  PacMan.cpp  Publisher.cpp  Scatter.cpp  State.cpp  Strategy.cpp  main.cpp
PacMan/tests/: CMakeLists.txt  GhostDirectionTest.cpp  GhostEatenTest.cpp  GhostImageTest.cpp  GhostMoveTest.cpp  GhostTest.cpp  GhostWallTest.cpp  MenuImageTest.cpp  MenuTest.cpp  PacManDirectionTest.cpp  PacManGhostCollisionTest.cpp  PacManImageTest.cpp  PacManLoadImage.cpp  PacManMoveTest.cpp  PacManSpriteTest.cpp  ScoreTest.cpp  SetDifficultyTest.cpp  StrategyTest.cpp  WallTest.cpp  mapImageTest.cpp  mapTest.cpp  test.cpp  wallTest.cpp
